--- a/Comparison.html
+++ b/Comparison.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="comparison.html">Comparison <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="Comparison.html">Comparison <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="datahtml.html">Data</a>
